samples/_failures_safe/1761042998_4056e0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5c1f9f69.c: In function ‘main’:
./samples/SAFE/__tmp_5c1f9f69.c:153:20: error: missing terminating " character
  153 |             printf("Processing complete. Press R to reset
      |                    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_5c1f9f69.c:153:13: error: expected expression at end of input
  153 |             printf("Processing complete. Press R to reset
      |             ^~~~~~
./samples/SAFE/__tmp_5c1f9f69.c:153:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5c1f9f69.c:153:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5c1f9f69.c:153:13: error: expected declaration or statement at end of input
